// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add Question Test show screen Add Question 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <nav
          class="bg-slate-50"
          data-headlessui-state=""
        >
          <div
            class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8"
          >
            <div
              class="relative flex h-16 items-center justify-between"
            >
              <div
                class="absolute inset-y-0 left-0 flex items-center sm:hidden"
              >
                <button
                  aria-expanded="false"
                  class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
                  data-headlessui-state=""
                  id="headlessui-disclosure-button-:r0:"
                  type="button"
                >
                  <span
                    class="absolute -inset-0.5"
                  />
                  <span
                    class="sr-only"
                  >
                    Open main menu
                  </span>
                  <svg
                    aria-hidden="true"
                    class="block h-6 w-6"
                    data-slot="icon"
                    fill="none"
                    stroke="currentColor"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start"
              >
                <div
                  class="flex flex-shrink-0 items-center"
                >
                  <img
                    alt="Your Company"
                    class="h-8 w-auto"
                    src="https://cdn-icons-png.flaticon.com/512/9131/9131514.png"
                  />
                </div>
                <div
                  class="hidden sm:ml-6 sm:block"
                >
                  <div
                    class="flex space-x-4"
                  >
                    <a
                      class="text-slate-600 hover:bg-slate-200 hover:text-slate-900 rounded-md px-3 py-2 text-sm font-medium"
                      href="/dashboard"
                    >
                      Dashboard
                    </a>
                    <a
                      class="text-slate-600 hover:bg-slate-200 hover:text-slate-900 rounded-md px-3 py-2 text-sm font-medium"
                      href="/leadership"
                    >
                      Leadership
                    </a>
                    <a
                      aria-current="page"
                      class="bg-slate-200 text-slate-900 rounded-md px-3 py-2 text-sm font-medium"
                      href="/new"
                    >
                      New
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0"
              >
                <div
                  class="relative ml-3"
                  data-headlessui-state=""
                >
                  <div>
                    <button
                      aria-expanded="false"
                      aria-haspopup="menu"
                      class="relative flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
                      data-headlessui-state=""
                      id="headlessui-menu-button-:r2:"
                      type="button"
                    >
                      <span
                        class="absolute -inset-1.5"
                      />
                      <span
                        class="sr-only"
                      >
                        Open user menu
                      </span>
                      <img
                        alt=""
                        class="h-8 w-8 rounded-full"
                        src="/image/undefined"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </nav>
        <div
          class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm"
        >
          <div
            class="sm:mx-auto sm:w-full sm:max-w-sm"
          >
            <h2
              class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900"
            >
              Would you rather
            </h2>
            <p
              class="text-slate-400"
            >
              Create your own poll
            </p>
          </div>
          <form
            action="#"
            class="space-y-6"
            method="POST"
          >
            <div>
              <label
                class="block text-left text-sm font-medium leading-6 text-gray-900"
                for="firstOption"
              >
                First Option
              </label>
              <div
                class="mt-2"
              >
                <input
                  class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 p-2"
                  data-testid="optionOne"
                  id="firstOption"
                  name="firstOption"
                  placeholder="Option One"
                  required=""
                  type="text"
                />
              </div>
            </div>
            <div>
              <div
                class="flex items-center justify-between"
              >
                <label
                  class="block text-sm font-medium leading-6 text-gray-900"
                  for="secondOption"
                >
                  Second Option
                </label>
              </div>
              <div
                class="mt-2"
              >
                <input
                  class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 p-2"
                  data-testid="optionTwo"
                  id="secondOption"
                  name="secondOption"
                  placeholder="Option Two"
                  required=""
                  type="text"
                />
              </div>
            </div>
            <div>
              <button
                class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
                type="submit"
              >
                Submit
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <nav
        class="bg-slate-50"
        data-headlessui-state=""
      >
        <div
          class="mx-auto max-w-7xl px-2 sm:px-6 lg:px-8"
        >
          <div
            class="relative flex h-16 items-center justify-between"
          >
            <div
              class="absolute inset-y-0 left-0 flex items-center sm:hidden"
            >
              <button
                aria-expanded="false"
                class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
                data-headlessui-state=""
                id="headlessui-disclosure-button-:r0:"
                type="button"
              >
                <span
                  class="absolute -inset-0.5"
                />
                <span
                  class="sr-only"
                >
                  Open main menu
                </span>
                <svg
                  aria-hidden="true"
                  class="block h-6 w-6"
                  data-slot="icon"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="1.5"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </button>
            </div>
            <div
              class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start"
            >
              <div
                class="flex flex-shrink-0 items-center"
              >
                <img
                  alt="Your Company"
                  class="h-8 w-auto"
                  src="https://cdn-icons-png.flaticon.com/512/9131/9131514.png"
                />
              </div>
              <div
                class="hidden sm:ml-6 sm:block"
              >
                <div
                  class="flex space-x-4"
                >
                  <a
                    class="text-slate-600 hover:bg-slate-200 hover:text-slate-900 rounded-md px-3 py-2 text-sm font-medium"
                    href="/dashboard"
                  >
                    Dashboard
                  </a>
                  <a
                    class="text-slate-600 hover:bg-slate-200 hover:text-slate-900 rounded-md px-3 py-2 text-sm font-medium"
                    href="/leadership"
                  >
                    Leadership
                  </a>
                  <a
                    aria-current="page"
                    class="bg-slate-200 text-slate-900 rounded-md px-3 py-2 text-sm font-medium"
                    href="/new"
                  >
                    New
                  </a>
                </div>
              </div>
            </div>
            <div
              class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0"
            >
              <div
                class="relative ml-3"
                data-headlessui-state=""
              >
                <div>
                  <button
                    aria-expanded="false"
                    aria-haspopup="menu"
                    class="relative flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
                    data-headlessui-state=""
                    id="headlessui-menu-button-:r2:"
                    type="button"
                  >
                    <span
                      class="absolute -inset-1.5"
                    />
                    <span
                      class="sr-only"
                    >
                      Open user menu
                    </span>
                    <img
                      alt=""
                      class="h-8 w-8 rounded-full"
                      src="/image/undefined"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </nav>
      <div
        class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm"
      >
        <div
          class="sm:mx-auto sm:w-full sm:max-w-sm"
        >
          <h2
            class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900"
          >
            Would you rather
          </h2>
          <p
            class="text-slate-400"
          >
            Create your own poll
          </p>
        </div>
        <form
          action="#"
          class="space-y-6"
          method="POST"
        >
          <div>
            <label
              class="block text-left text-sm font-medium leading-6 text-gray-900"
              for="firstOption"
            >
              First Option
            </label>
            <div
              class="mt-2"
            >
              <input
                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 p-2"
                data-testid="optionOne"
                id="firstOption"
                name="firstOption"
                placeholder="Option One"
                required=""
                type="text"
              />
            </div>
          </div>
          <div>
            <div
              class="flex items-center justify-between"
            >
              <label
                class="block text-sm font-medium leading-6 text-gray-900"
                for="secondOption"
              >
                Second Option
              </label>
            </div>
            <div
              class="mt-2"
            >
              <input
                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 p-2"
                data-testid="optionTwo"
                id="secondOption"
                name="secondOption"
                placeholder="Option Two"
                required=""
                type="text"
              />
            </div>
          </div>
          <div>
            <button
              class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
              type="submit"
            >
              Submit
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Login Page Test will show Login Page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="flex min-h-full flex-1 flex-col justify-center px-6 py-12 lg:px-8"
      >
        <div
          class="sm:mx-auto sm:w-full sm:max-w-sm"
        >
          <img
            alt="Your Company"
            class="mx-auto h-10 w-auto"
            src="https://cdn-icons-png.flaticon.com/512/9131/9131514.png"
          />
          <h2
            class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900"
            data-testid="user-label"
          >
            Sign in to your account
          </h2>
        </div>
        <div
          class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm"
        >
          <form
            class="space-y-6"
            method="POST"
          >
            <div>
              <label
                class="block text-left text-sm font-medium leading-6 text-gray-900"
                for="user"
              >
                User
              </label>
              <div
                class="mt-2"
              >
                <select
                  class="block w-full rounded-md border-0 py-3 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 p-2"
                  id="user"
                  name="user"
                >
                  <option
                    value="sarahedo"
                  >
                    Sarah Edo
                  </option>
                  <option
                    value="tylermcginnis"
                  >
                    Tyler McGinnis
                  </option>
                  <option
                    value="mtsamis"
                  >
                    Mike Tsamis
                  </option>
                  <option
                    value="zoshikanlu"
                  >
                    Zenobia Oshikanlu
                  </option>
                </select>
              </div>
            </div>
            <div>
              <div
                class="flex items-center justify-between"
              >
                <label
                  class="block text-sm font-medium leading-6 text-gray-900"
                  for="password"
                >
                  Password
                </label>
              </div>
              <div
                class="mt-2"
              >
                <input
                  autocomplete="current-password"
                  class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 p-2"
                  id="password"
                  name="password"
                  required=""
                  type="password"
                />
              </div>
            </div>
            <div>
              <button
                class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
                type="submit"
              >
                Sign in
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="flex min-h-full flex-1 flex-col justify-center px-6 py-12 lg:px-8"
    >
      <div
        class="sm:mx-auto sm:w-full sm:max-w-sm"
      >
        <img
          alt="Your Company"
          class="mx-auto h-10 w-auto"
          src="https://cdn-icons-png.flaticon.com/512/9131/9131514.png"
        />
        <h2
          class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900"
          data-testid="user-label"
        >
          Sign in to your account
        </h2>
      </div>
      <div
        class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm"
      >
        <form
          class="space-y-6"
          method="POST"
        >
          <div>
            <label
              class="block text-left text-sm font-medium leading-6 text-gray-900"
              for="user"
            >
              User
            </label>
            <div
              class="mt-2"
            >
              <select
                class="block w-full rounded-md border-0 py-3 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 p-2"
                id="user"
                name="user"
              >
                <option
                  value="sarahedo"
                >
                  Sarah Edo
                </option>
                <option
                  value="tylermcginnis"
                >
                  Tyler McGinnis
                </option>
                <option
                  value="mtsamis"
                >
                  Mike Tsamis
                </option>
                <option
                  value="zoshikanlu"
                >
                  Zenobia Oshikanlu
                </option>
              </select>
            </div>
          </div>
          <div>
            <div
              class="flex items-center justify-between"
            >
              <label
                class="block text-sm font-medium leading-6 text-gray-900"
                for="password"
              >
                Password
              </label>
            </div>
            <div
              class="mt-2"
            >
              <input
                autocomplete="current-password"
                class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6 p-2"
                id="password"
                name="password"
                required=""
                type="password"
              />
            </div>
          </div>
          <div>
            <button
              class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
              type="submit"
            >
              Sign in
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
